cmake_minimum_required(VERSION 2.8)
IF (ENABLE_MEMCACHE)
  MESG(STATUS "memcache enabled")
  FILE(REMOVE memcache/UnitServerIgnore)
  add_subdirectory(memcache)
ELSE()
  MESG(STATUS "memcache disabled")
  FILE(WRITE memcache/UnitServerIgnore "disabled ${PROJECT_NAME}")
ENDIF()
add_subdirectory(posixFile)

SET(DRIVERS_LIB ${DRIVERS_LIB} PARENT_SCOPE)
